--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
         </div>
     </header>
     
+    
+
+    <footer class="rodape">
+        <h2 class="titulo_rodape">redes sociais</h2>
+        <nav>
+            <a href="https://github.com/"><img src="./img/github.png" alt="logo do github"></a>
+            <a href="https://twitter.com/"><img src="./img/twitter.png" alt="logo da rede social twitter"></a>
+            <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="logo da rede social facebook"></a>
+        </nav>
+    </footer>
 </body>
 </html>
