--- a/tecnologia.html
+++ b/tecnologia.html
@@ -16,3 +16,30 @@
             </ul>
         </nav>
     </header>
+
+    <section class="games">
+        <h2>Games</h2>
+        <p>Texto sobre Games etccc</p>
+        <figure>
+            <img src="*" alt="Imagem sobre Game">
+            <figcaption>Legenda da imagem</figcaption>
+        </figure>
+    </section>
+
+    <section class="mobile">
+        <h2>Mobile</h2>
+        <p>Texto sobre Mobile.</p>
+        <figure>
+            <img src="*" alt="Imagem sobre Mobile">
+            <figcaption>Legenda da imagem</figcaption>
+        </figure>
+    </section>
+
+    <section class="tecnologia">
+        <h2>Tecnologia</h2>
+        <p>Texto sobre Tecnologia.</p>
+        <figure>
+            <img src="*" alt="Imagem sobre Tecnologia">
+            <figcaption>Legenda da imagem </figcaption>
+        </figure>
+    </section>
