Adicionado footer com links das redes sociais

--- a/tecnologia.html
+++ b/tecnologia.html
@@ -43,3 +43,13 @@
             <figcaption>Legenda da imagem </figcaption>
         </figure>
     </section>
+
+    <footer>
+        <h2>Redes Sociais</h2>
+            <nav>
+            <a href="https://github.com"><img src="./img/github.png" alt="Logo do Github"></a>
+            <a href="https://facebook.com"><img src="./img/facebook.png" alt="Logo do Facebook"></a>
+            <a href="https://twitter.com"><img src="./img/twitter.png" alt="Logo do Twitter"></a>
+        </nav>
+    </footer> 
+    <html> 
