--- a/tecnologia.html
+++ b/tecnologia.html
@@ -21,7 +21,7 @@
         <h2>Games</h2>
         <p>Texto sobre Games etccc</p>
         <figure>
-            <img src="*" alt="Imagem sobre Game">
+            <img src="games.jpg" alt="Imagem sobre Game">
             <figcaption>Legenda da imagem</figcaption>
         </figure>
     </section>
@@ -30,7 +30,7 @@
         <h2>Mobile</h2>
         <p>Texto sobre Mobile.</p>
         <figure>
-            <img src="*" alt="Imagem sobre Mobile">
+            <img src="mobile.jpg" alt="Imagem sobre Mobile">
             <figcaption>Legenda da imagem</figcaption>
         </figure>
     </section>
@@ -39,7 +39,7 @@
         <h2>Tecnologia</h2>
         <p>Texto sobre Tecnologia.</p>
         <figure>
-            <img src="*" alt="Imagem sobre Tecnologia">
+            <img src="tecnologia.jpg" alt="Imagem sobre Tecnologia">
             <figcaption>Legenda da imagem </figcaption>
         </figure>
     </section>
