--- a/index.html
+++ b/index.html
@@ -20,9 +20,23 @@
             </nav>
         </div>
     </header>
+    <main class="fundo_conteudo">
+        <section class="grid_conteudo">
+            <article class="fundo_card">
+                <div class="conteudo_card">
+                    <figure>
+                        <img src="./img/games.jpg" alt="A imagem se trata de um controle de video game, um fone de ouvido e um teclado os três são rgb" class="img_card">
     
-    
-
+                        <figcaption class="legenda_img">
+                            Lorem ipsum dolor sit amet.
+                        </figcaption>
+                    </figure>
+                    <h2 class="titulo_card">games</h2>
+                    <p class="txt_card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis dolores facilis eligendi quos earum deserunt repudiandae possimus corporis, perferendis corrupti!</p>
+                </div>
+            </article>
+        </section>
+    </main>
     <footer class="rodape">
         <h2 class="titulo_rodape">redes sociais</h2>
         <nav>
