--- a/pages/games.html
+++ b/pages/games.html
@@ -10,6 +10,16 @@
     <title>Games</title>
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <div class="grid_cabecalho">
+            <img src="./img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
+
+            <nav class="links_cabecalho">
+                <a href="">home</a>
+                <a href="">mobile</a>
+                <a href="">tecnologia</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
