estrutura games criada e arquivo css. Parte do css terminar estilizaçao

--- a/pages/games.html
+++ b/pages/games.html
@@ -12,7 +12,7 @@
 <body>
     <header class="cabecalho">
         <div class="grid_cabecalho">
-            <img src="./img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
+            <img src="../img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
 
             <nav class="links_cabecalho">
                 <a href="">home</a>
@@ -21,12 +21,22 @@
             </nav>
         </div>
     </header>
+    
+    <section>
+        <h2>Games</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quae maiores obcaecati ullam dignissimos neque iure! Quibusdam expedita quia at. Deserunt eligendi consequuntur, ad non tenetur maxime molestiae voluptatem quibusdam laboriosam culpa nostrum harum suscipit, asperiores repudiandae iusto molestias praesentium.</p>
+        <figure>
+            <img src="../img/games.jpg" alt="">
+            <figcaption>aaaaaaaaaaaaaaa</figcaption>
+        </figure>
+    </section>
+
     <footer class="rodape">
         <h2 class="titulo_rodape">redes sociais</h2>
         <nav>
-            <a href="https://github.com/"><img src="./img/github.png" alt="logo do github"></a>
-            <a href="https://twitter.com/"><img src="./img/twitter.png" alt="logo da rede social twitter"></a>
-            <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="logo da rede social facebook"></a>
+            <a href="https://github.com/"><img src="../img/github.png" alt="logo do github"></a>
+            <a href="https://twitter.com/"><img src="../img/twitter.png" alt="logo da rede social twitter"></a>
+            <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="logo da rede social facebook"></a>
         </nav>
     </footer>
 </body>
