modificacoes na pagina games

--- a/pages/games.html
+++ b/pages/games.html
@@ -22,14 +22,22 @@
         </div>
     </header>
     
-    <section>
-        <h2>Games</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quae maiores obcaecati ullam dignissimos neque iure! Quibusdam expedita quia at. Deserunt eligendi consequuntur, ad non tenetur maxime molestiae voluptatem quibusdam laboriosam culpa nostrum harum suscipit, asperiores repudiandae iusto molestias praesentium.</p>
-        <figure>
-            <img src="../img/games.jpg" alt="">
-            <figcaption>aaaaaaaaaaaaaaa</figcaption>
-        </figure>
-    </section>
+    <main class="fundo_conteudo">
+        <section class="section_conteudo">
+            <div class="wrap_conteudo">
+                <div class="titulo_txt">
+                    <h2 class="titulo_section">games</h2>
+                    <p class="txt_section">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptas modi perspiciatis nemo error esse dolor nisi, nobis minima aut.</p>
+                </div>
+                
+                <figure class="figure_section">
+                    <img src="../img/games.jpg" alt="" class="img_section">
+
+                    <figcaption class="legenda_img">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                </figure>
+            </div>
+        </section>
+    </main>
 
     <footer class="rodape">
         <h2 class="titulo_rodape">redes sociais</h2>
