--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="">
-    <title>Home</title>
-</head>
-<body>
-    <header class="cabecalho">
-        <div class="grid_cabecalho">
-            <img src="./img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
+    <html lang="pt-br">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="./css/style.css">
+            <link rel="stylesheet" href="">
+            <title>Home</title>
+        </head>
+        <body>
+            <header class="cabecalho">
+                <div class="grid_cabecalho">
+                    <img src="./img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
 
-            <nav class="links_cabecalho">
-                <a href="">games</a>
-                <a href="">mobile</a>
-                <a href="">tecnologia</a>
-            </nav>
-        </div>
-    </header>
+                    <nav class="links_cabecalho">
+                        <a href="">games</a>
+                        <a href="">mobile</a>
+                        <a href="">tecnologia</a>
+                    </nav>
+                </div>
+            </header>
+
+
+            <footer class="rodape">
+                <h2 class="titulo_rodape">redes sociais</h2>
+                <nav>
+                    <a href="https://github.com/"><img src="./img/github.png" alt="logo do github"></a>
+                    <a href="https://twitter.com/"><img src="./img/twitter.png" alt="logo da rede social twitter"></a>
+                    <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="logo da rede social facebook"></a>
+                </nav>
+            </footer>
+        </body>
+    </html>
