--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -4,9 +4,9 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="./css/style.css">
-            <link rel="stylesheet" href="">
-            <title>Home</title>
+            <link rel="stylesheet" href="../css/style.css">
+            <link rel="stylesheet" href="../css/mobile.css">
+            <title>Mobile</title>
         </head>
         <body>
             <header class="cabecalho">
@@ -14,16 +14,35 @@
                     <img src="./img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
 
                     <nav class="links_cabecalho">
-                        <a href="">games</a>
-                        <a href="">mobile</a>
-                        <a href="">tecnologia</a>
+                        <a href="../index.html">Home</a>
+                        <a href="./games.html">Games</a>
+                        <a href="./tecnologia.html">Tecnologia</a>
                     </nav>
                 </div>
             </header>
 
+            <main class="fundo_conteudo">
+                <section class="section_conteudo">
+                    <div class="wrap_conteudo">
+                        <div class="titulo_txt">
+                            <h2 class="titulo_section">Mobile</h2>
+                            <p class="txt_section">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti accusantium fuga soluta reiciendis enim modi voluptatem officiis numquam sit et dolores, illo, vitae quod! Doloribus ipsa corporis delectus, quam quaerat deserunt in odio ex eum consequatur maxime eligendi temporibus maiores vero laudantium rerum natus cum labore optio inventore quae? Esse aliquid eveniet, sapiente dolore nesciunt distinctio? Placeat dolores delectus quidem et explicabo fuga cupiditate sint provident, eligendi ducimus sunt, quasi sed quibusdam nemo exercitationem ipsa obcaecati laudantium laborum nisi dignissimos ullam reiciendis! Magnam magni odio esse animi saepe eveniet qui fugit eos id iusto mollitia doloribus, ipsam eius consectetur.
+                            </p>
+                        </div>
+                        
+                        <figure class="figure_section">
+                            <img src="../img/mobile.jpeg" alt="" class="img_section">
+        
+                            <figcaption class="legenda_img">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
+                    </div>
+                </section>
+            </main>
+
 
             <footer class="rodape">
-                <h2 class="titulo_rodape">redes sociais</h2>
+                <h2 class="titulo_rodape">Redes sociais</h2>
                 <nav>
                     <a href="https://github.com/"><img src="./img/github.png" alt="logo do github"></a>
                     <a href="https://twitter.com/"><img src="./img/twitter.png" alt="logo da rede social twitter"></a>
