corrigindo links rodape

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -44,9 +44,9 @@
             <footer class="rodape">
                 <h2 class="titulo_rodape">Redes sociais</h2>
                 <nav>
-                    <a href="https://github.com/"><img src="./img/github.png" alt="logo do github"></a>
-                    <a href="https://twitter.com/"><img src="./img/twitter.png" alt="logo da rede social twitter"></a>
-                    <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="logo da rede social facebook"></a>
+                    <a href="https://github.com/"><img src="../img/github.png" alt="logo do github"></a>
+                    <a href="https://twitter.com/"><img src="../img/twitter.png" alt="logo da rede social twitter"></a>
+                    <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="logo da rede social facebook"></a>
                 </nav>
             </footer>
         </body>
