--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -11,7 +11,7 @@
         <body>
             <header class="cabecalho">
                 <div class="grid_cabecalho">
-                    <img src="./img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
+                    <img src="../img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
 
                     <nav class="links_cabecalho">
                         <a href="../index.html">Home</a>
