Adicionando link css

--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" href="./imgs/placaEstacionamento.png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tecnologia.css">
+    
     <title>Tecnologia</title> 
 </head>
 <body> 
