--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -15,9 +15,10 @@
                     <img src="../img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
 
                     <nav class="links_cabecalho">
-                        <a href="../index.html">Home</a>
-                        <a href="./games.html">Games</a>
-                        <a href="./tecnologia.html">Tecnologia</a>
+                        <a href="../index.html">home</a>
+                        <a href="./games.html">games</a>
+                        <a href="./mobile.html">mobile</a>
+                        <a href="./tecnologia.html">tecnologia</a>
                     </nav>
                 </div>
             </header>
@@ -43,11 +44,11 @@
 
 
             <footer class="rodape">
-                <h2 class="titulo_rodape">Redes sociais</h2>
+                <h2 class="titulo_rodape">redes sociais</h2>
                 <nav>
-                    <a href="https://github.com/"><img src="../img/github.png" alt="logo do github"></a>
-                    <a href="https://twitter.com/"><img src="../img/twitter.png" alt="logo da rede social twitter"></a>
-                    <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="logo da rede social facebook"></a>
+                    <a href="https://github.com/" target="_blank"><img src="../img/github.png" alt="logo do github"></a>
+                    <a href="https://twitter.com/" target="_blank"><img src="../img/twitter.png" alt="logo da rede social twitter"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logo da rede social facebook"></a>
                 </nav>
             </footer>
         </body>
