--- a/pages/games.html
+++ b/pages/games.html
@@ -16,9 +16,10 @@
             <img src="../img/fiapLogo.jpeg" alt="Logo da faculdade FIAP" class="img_cabecalho">
 
             <nav class="links_cabecalho">
-                <a href="">home</a>
-                <a href="">mobile</a>
-                <a href="">tecnologia</a>
+                <a href="../index.html">home</a>
+                <a href="./games.html">games</a>
+                <a href="./mobile.html">mobile</a>
+                <a href="./tecnologia.html">tecnologia</a>
             </nav>
         </div>
     </header>
@@ -43,9 +44,9 @@
     <footer class="rodape">
         <h2 class="titulo_rodape">redes sociais</h2>
         <nav>
-            <a href="https://github.com/"><img src="../img/github.png" alt="logo do github"></a>
-            <a href="https://twitter.com/"><img src="../img/twitter.png" alt="logo da rede social twitter"></a>
-            <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="logo da rede social facebook"></a>
+            <a href="https://github.com/" target="_blank"><img src="../img/github.png" alt="logo do github"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="../img/twitter.png" alt="logo da rede social twitter"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="logo da rede social facebook"></a>
         </nav>
     </footer>
 </body>
