Adicionamos os textos para games.html

--- a/pages/games.html
+++ b/pages/games.html
@@ -29,13 +29,13 @@
             <div class="wrap_conteudo">
                 <div class="titulo_txt">
                     <h2 class="titulo_section">games</h2>
-                    <p class="txt_section">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptas modi perspiciatis nemo error esse dolor nisi, nobis minima aut.</p>
+                    <p class="txt_section">É possível afirmar que todo mundo já jogou algum jogo pelo menos uma vez na vida, seja um joguinho simples de celular ou um jogo famoso produzido pelas gigantes da indústria dos games. Ao contrário do que muitos dizem, jogos em geral possuem diversos benefícios como por exemplo, promover trabalho em equipe, estimulam criatividade e melhoram a estratégia e liderança. O Brasil assumiu em 2021 o posto de maior mercado de videogames na América Latina, superando o México, e a receita do setor em território nacional pode duplicar até 2026, segundo o relatório sobre entretenimento e mídia da PwC 2022-2026. Em 2021, a indústria doméstica de jogos eletrônicos contabilizou receita de US$ 1,4 bilhão e poderá chegar até US$ 2,8 bilhões em 2026. O País deve se tornar responsável por 47,4% da receita total da região no final do período. </p>
                 </div>
                 
                 <figure class="figure_section">
-                    <img src="../img/games.jpg" alt="" class="img_section">
+                    <img src="../img/games.jpg" alt="Na imagem tem um controle, teclado e um fone." class="img_section">
 
-                    <figcaption class="legenda_img">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                    <figcaption class="legenda_img">Na imagem tem um controle, teclado e um fone.</figcaption>
                 </figure>
             </div>
         </section>
