Adicionamos os textos para a mobile.html

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -29,14 +29,14 @@
                         <div class="titulo_txt">
                             <h2 class="titulo_section">Mobile</h2>
                             <p class="txt_section">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti accusantium fuga soluta reiciendis enim modi voluptatem officiis numquam sit et dolores, illo, vitae quod! Doloribus ipsa corporis delectus, quam quaerat deserunt in odio ex eum consequatur maxime eligendi temporibus maiores vero laudantium rerum natus cum labore optio inventore quae? Esse aliquid eveniet, sapiente dolore nesciunt distinctio? Placeat dolores delectus quidem et explicabo fuga cupiditate sint provident, eligendi ducimus sunt, quasi sed quibusdam nemo exercitationem ipsa obcaecati laudantium laborum nisi dignissimos ullam reiciendis! Magnam magni odio esse animi saepe eveniet qui fugit eos id iusto mollitia doloribus, ipsam eius consectetur.
+                                Toda tecnologia que permite a uma pessoa se movimentar sem abdicar dela pode ser considerada mobile. Neste sentido, temos usado esse recurso bem antes da proliferação dos smartphones, com os notebooks. Acontece que a tecnologia mobile está cada dia mais ágil e compacta, permitindo que a levemos no bolso ou na bolsa. Além dos smartphones e notebooks, temos os iPads, tablets, minibooks, ultrabooks, entre outros. Isso sem falar em outras peças-chave, como pendrives, cartões SD e HDs externos. No campo dos “serviços mobile”, podemos incluir o GPS, WiFi, Bluetooth, WAP e SMS. Some aqui, ainda, todo o universo de aplicativos mobile que usamos diariamente em nossos smartphones, desde redes sociais , até os apps de bancos, jogos e demais serviços. 
                             </p>
                         </div>
                         
                         <figure class="figure_section">
-                            <img src="../img/mobile.jpeg" alt="" class="img_section">
+                            <img src="../img/mobile.jpeg" alt="Uma pessoa mexendo no celular." class="img_section">
         
-                            <figcaption class="legenda_img">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            <figcaption class="legenda_img">Uma pessoa mexendo no celular.</figcaption>
                         </figure>
                     </div>
                 </section>
