Adicionamos o texto para a tecnologia.html

--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -28,13 +28,14 @@
             <div class="wrap_conteudo">
                 <div class="titulo_txt">
                     <h2 class="titulo_section">Tecnologia</h2>
-                    <p class="txt_section">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti accusantium fuga soluta reiciendis enim modi voluptatem officiis numquam sit et dolores, illo, vitae quod! Doloribus ipsa corporis delectus, quam quaerat deserunt in odio ex eum consequatur maxime eligendi temporibus maiores vero laudantium rerum natus cum labore optio inventore quae? Esse aliquid eveniet, sapiente dolore nesciunt distinctio? Placeat dolores delectus quidem et explicabo fuga cupiditate sint provident, eligendi ducimus sunt, quasi sed quibusdam nemo exercitationem ipsa obcaecati laudantium laborum nisi dignissimos ullam reiciendis! Magnam magni odio esse animi saepe eveniet qui fugit eos id iusto mollitia doloribus, ipsam eius consectetur.</p>
+                    <p class="txt_section">Em tempos de reinvenção, diversas empresas e indústria estão investindo em inovação e utilizam ferramentas tecnológicas sofisticadas para atender as mais diversas necessidades dos clientes que vivem na "era da industria 4.0". Investimentos em inovação nesta indústria também procuram capacitar o gestor do negócio na tomada de decisão e colaboram com a elaboração de estratégias de negócio mais bem-sucedidas, seja on ou offline, apoiadas em análise de dados.     
+                        </p>
                 </div>
                 
                 <figure class="figure_section">
-                    <img src="../img/tecnologia.jpg" alt="" class="img_section">
+                    <img src="../img/tecnologia.jpg" alt="Imagem que ilustra a tecnologia." class="img_section">
 
-                    <figcaption class="legenda_img">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                    <figcaption class="legenda_img">Imagem que ilustra a tecnologia.</figcaption>
                 </figure>
             </div>
         </section>
